# cohortbalancer3

./: .gitignore  CHANGELOG.md  README.md  collect_ci_problems.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  tests.yml
cohortbalancer3/: __init__.py  datatypes.py  matcher.py  reporting.py  reporting_templates.py  validation.py  visualization.py
cohortbalancer3/matching/: distances.py  greedy.py  optimal.py
cohortbalancer3/metrics/: balance.py  propensity.py  treatment.py  utils.py
cohortbalancer3/utils/: __init__.py  logging.py
docs/: api_guide.md
examples/: advanced_usage.py  basic_matching.py  match_and_visualize.py  report_generation.py  simplified_usage.py
tests/: __init__.py  test_balance.py  test_bugfixes.py  test_distances.py  test_greedy.py  test_index_preservation.py  test_integration.py  test_matcher.py  test_matcher_participant_ids.py  test_optimal.py  test_participant_ids_edge_cases.py  test_propensity.py  test_treatment.py  test_utils.py
